--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   plugin_platform_interface: ^2.1.8
-  camera: ^0.10.5+9
+  camera: ^0.11.1
   image_editor: ^1.6.0
 
 dev_dependencies:
