--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.codewithemmany.easy_camera">
+  package="com.codewithemmany.flutter_easy_camera">
 </manifest>
