--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
   flutter: ">=3.3.0"
 
 dependencies:
-  camera: 0.10.6
+  camera: ^0.10.6
   flutter:
     sdk: flutter
   image_editor: ^1.6.0
