--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: flutter_easy_camera
-description: "EasyCamera is a Flutter plugin for seamless camera integration, offering customizable settings, preview styles, and intuitive controls for capturing images."
+description: "EasyCamera is a Flutter plugin for seamless camera integration,
+  offering customizable settings, preview styles, and intuitive controls for
+  capturing images."
 version: 0.0.3
 homepage: https://github.com/TheinvinciblePrints/easy_camera
 
@@ -12,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_editor: ^1.6.0
+  native_device_orientation: ^2.0.3
   photo_view: ^0.15.0
   plugin_platform_interface: ^2.1.8
 
