--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,19 +2,22 @@ name: flutter_easy_camera
 description: "EasyCamera is a Flutter plugin for seamless camera integration,
   offering customizable settings, preview styles, and intuitive controls for
   capturing images."
-version: 0.0.7
+
 homepage: https://github.com/TheinvinciblePrints/easy_camera
 
 environment:
-  sdk: ^3.7.0
-  flutter: ">=3.3.0"
+  sdk: ">=3.9.2 <4.0.0"
+  flutter: ">=3.35.4"
 
 dependencies:
-  camera: ^0.10.6
+  camera: ^0.11.2
   flutter:
     sdk: flutter
   image_editor: ^1.6.0
-  native_device_orientation: ^2.0.3
+  native_device_orientation:
+    git:
+      url: https://github.com/bashcious/flutter_native_device_orientation.git
+      ref: master
   photo_view: ^0.15.0
 
 dev_dependencies:
